--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "dateformat": "^1.0.12",
-    "strftime": "^0.9.2"
+    "strftime": "^0.9.2",
+    "through2-map": "^2.0.0"
   }
 }
